--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://www.freepik.com/free-vector/stylish-indian-flag-design_1191873.htm#query=jpg&position=1&from_view=keyword&track=sph" alt = "favpic">        
     <script type="text/javascript" src="./script.js">
 </script>
 
