--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src ="C:\Users\MUHAMMAD.DESKTOP-U5IUEFB\Pictures\Screenshots" alt = "pic">     
+	<img src ="C:\Users\MUHAMMAD.DESKTOP-U5IUEFB\Downloads\sherry-christian-8Myh76_3M2U-unsplash.jpg" alt = "pic">     
     <script type="text/javascript" src="./script.js">
 </script>
 
