--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src ="E:\sherry-christian-8Myh76_3M2U-unsplash.jpg" alt = "pic">     
+	<img src ="https://unsplash.com/photos/8Myh76_3M2U" alt = "pic">     
     <script type="text/javascript" src="./script.js">
 </script>
 
