--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src ="C:\Users\MUHAMMAD.DESKTOP-U5IUEFB\Downloads" alt = "pic">     
+	<img src ="https://picsum.photos/id/123/200/300" alt = "pic">
     <script type="text/javascript" src="./script.js">
 </script>
 
